--- a/_publications/1.COMSNETS.md
+++ b/_publications/1.COMSNETS.md
@@ -1,7 +1,7 @@
 ---
 title: "Demonstrating Multi-modal Human Instruction Comprehension with AR Smart Glass"
 collection: publications
-permalink: /publication/cosm2ic
+permalink: /publication/comsnets
 excerpt: ''
 date: 03.01.2023
 venue: '2023 15th International Conference on COMmunication Systems & NETworkS (COMSNETS)'
