--- a/_publications/10.SPIE2017.md
+++ b/_publications/10.SPIE2017.md
@@ -1,7 +1,7 @@
 ---
 title: "Discovering anomalous events from urban informatics data"
 collection: publications
-permalink: /publication/cosm2ic
+permalink: /publication/spie17
 excerpt: ''
 date: 4.5.2017
 venue: 'Ground/Air Multisensor Interoperability, Integration, and Networking for Persistent ISR VIII'
