--- a/_publications/4.ICMI2020.md
+++ b/_publications/4.ICMI2020.md
@@ -1,7 +1,7 @@
 ---
 title: "Gesture enhanced comprehension of ambiguous human-to-robot instructions"
 collection: publications
-permalink: /publication/cosm2ic
+permalink: /publication/icmi
 excerpt: ''
 date: 21.10.2020
 venue: 'Proceedings of the 2020 International Conference on Multimodal Interaction'
