--- a/_publications/5.ACM2020.md
+++ b/_publications/5.ACM2020.md
@@ -1,7 +1,7 @@
 ---
 title: "Five challenges in cloud-enabled intelligence and control"
 collection: publications
-permalink: /publication/cosm2ic
+permalink: /publication/toit
 excerpt: ''
 date: 10.2.2020
 venue: 'ACM Transactions on Internet Technology (TOIT)'
