--- a/_publications/8.SPEI2019.md
+++ b/_publications/8.SPEI2019.md
@@ -1,7 +1,7 @@
 ---
 title: "Dependable machine intelligence at the tactical edge"
 collection: publications
-permalink: /publication/cosm2ic
+permalink: /publication/spie19
 excerpt: ''
 date: 10.5.2019
 venue: 'Artificial Intelligence and Machine Learning for Multi-Domain Operations Applications'
