--- a/_publications/9.IEEE2019.md
+++ b/_publications/9.IEEE2019.md
@@ -1,7 +1,7 @@
 ---
 title: "The challenge of collaborative iot-based inferencing in adversarial settings"
 collection: publications
-permalink: /publication/cosm2ic
+permalink: /publication/infocom
 excerpt: ''
 date: 29.4.2019
 venue: 'IEEE INFOCOM 2019-IEEE Conference on Computer Communications Workshops (INFOCOM WKSHPS)'
