--- a/_publications/2.softskip.md
+++ b/_publications/2.softskip.md
@@ -1,7 +1,7 @@
 ---
 title: "SoftSkip: Empowering Multi-Modal Dynamic Pruning for Single-Stage Referring Comprehension"
 collection: publications
-permalink: /publication/cosm2ics
+permalink: /publication/softskip
 excerpt: ''
 date: 10.10.2022
 venue: 'Proceedings of the 30th ACM International Conference on Multimedia'
