--- a/_publications/6.Eugene2019.md
+++ b/_publications/6.Eugene2019.md
@@ -1,7 +1,7 @@
 ---
 title: "Eugene: Towards deep intelligence as a service"
 collection: publications
-permalink: /publication/cosm2ic
+permalink: /publication/eugene
 excerpt: ''
 date: 7.7.2019
 venue: '2019 IEEE 39th International Conference on Distributed Computing Systems (ICDCS)'
