--- a/_publications/7.FUSION2019.md
+++ b/_publications/7.FUSION2019.md
@@ -1,7 +1,7 @@
 ---
 title: "Resilient Collaborative Intelligence for Adversarial IoT Environments"
 collection: publications
-permalink: /publication/cosm2ic
+permalink: /publication/fusion
 excerpt: ''
 date: 2.7.2019
 venue: '2019 22th International Conference on Information Fusion (FUSION)'
